Vendor libcurl and libnghttp2
curl 7.82.0
nghttp2 1.47.0

Parfetch must be statically linked since it's provisioned
inside Poudriere (maybe even non-native) jails where curl isn't
available. Using third-party packages for that was easy but
FreeBSD Ports has proven to be unreliable multiple times over
when it comes to static linking. Opt-out of using it for that
purpose.

--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -8,6 +8,10 @@ The format is based on https://keepachangelog.com/en/1.0.0/[Keep a ChangeLog].
 
 == Unreleased
 
+=== Changed
+
+* Vendor curl and nghttp2 due to the unreliable static linking support in FreeBSD Ports
+
 == [0.1.1] - 2022-01-29
 
 === Changed
